primary: register, auth, log out proto (need ui)

--- a/src/css/custom/classes.scss
+++ b/src/css/custom/classes.scss
@@ -1,4 +1,16 @@
-.link-text-to {
+//fonts
+.standart-fat {
+  color: $standartWhite;
   font-size: 16px;
+  font-weight: 700;
   line-height: 30px;
+}
+
+//containers
+.layoutContainer {
+  background-color: $backgroundStandart;
+}
+
+.blueContainer {
+  background-color: $backgroundBlueContainer;
 }
