--- a/src/css/custom/variables.scss
+++ b/src/css/custom/variables.scss
@@ -9,3 +9,15 @@ $zeroDefault: 0;
 
 //fonts
 $fontDefault: 14px;
+
+//colors
+$standartWhite: #fff;
+
+//quasar colors
+$backgroundStandart: #cfd8dc;
+$backgroundBlueContainer: #607d8b;
+
+//sizes
+$tabletMedia: 768px;
+$macMedia: 1080px;
+$desktopMedia: 1980px;
